feat(controller) : create FrontControllers and twig view for Character Serie and Creator

--- a/templates/characters/index.html.twig
+++ b/templates/characters/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MarvelController!{% endblock %}
+{% block title %}Hello CharactersController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/src/Controller/MarvelController.php</code></li>
-        <li>Your template at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/templates/marvel/index.html.twig</code></li>
+        <li>Your controller at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/src/Controller/CharactersController.php</code></li>
+        <li>Your template at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/templates/characters/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
