--- a/templates/series/index.html.twig
+++ b/templates/series/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CharacterController!{% endblock %}
+{% block title %}Hello SeriesController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/src/Controller/CharacterController.php</code></li>
-        <li>Your template at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/templates/character/index.html.twig</code></li>
+        <li>Your controller at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/src/Controller/SeriesController.php</code></li>
+        <li>Your template at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/templates/series/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
