feat(comics) : add new slug field in comic entity , add comic_details view and add comicDetails function in FrontController

--- a/templates/comics/_list.html.twig
+++ b/templates/comics/_list.html.twig
@@ -1,9 +1,11 @@
 {% for comic in comics %}
-    <div class="comic-card">
-        <img src="{{ comic.thumbnail ?: asset('assets/images/comic-no-img.jpg') }}" alt="{{ comic.title }}">
-        <h3>{{ comic.title }}</h3>
-        <p>{{ comic.date|date("Y-m-d") ?: 'unknown date' }}</p>
-    </div>
+    <a href="comics/{{ comic.id }}-{{ comic.slug }}">
+        <div class="comic-card">
+            <img src="{{ comic.thumbnail ?: asset('assets/images/comic-no-img.jpg') }}" alt="{{ comic.title }}">
+            <h3>{{ comic.title }}</h3>
+            <p>{{ comic.date|date("Y-m-d") ?: 'unknown date' }}</p>
+        </div>
+    </a>
 {% else %}
     <p>Aucun comic trouvé.</p>
 {% endfor %}
