--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Marvel Explorer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
 </head>
 <body>
-        {% block body %}
-        {% endblock %}
+<header>
+    <!-- Bannière image -->
+    <div class="banner">
+        <img src="{{ asset('assets/images/marvel-banner.png') }}" alt="Marvel Banner" class="img-fluid w-100">
+    </div>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold text-danger" href="{{ path('front_home') }}">
+                <img src="{{ asset('assets/images/marvel-logo.png') }}"
+                     alt="Marvel Logo"
+                     class="img-fluid"
+                     style="max-height:40px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link {% if app.request.get('_route') starts with 'front_comics' %}active{% endif %}"
+                           href="{{ path('front_comics') }}">Comics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if app.request.get('_route') starts with 'front_series' %}active{% endif %}"
+                           href="{{ path('front_series') }}">Series</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if app.request.get('_route') starts with 'front_series' %}active{% endif %}"
+                           href="{{ path('front_series') }}">Characters</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
+{% block body %}
+{% endblock %}
 </body>
+
 </html>
