--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <input type="text" id="search-bar" placeholder="Rechercher un comic..."/>
+    <h1>The Lastest Comics</h1>
 
     <div class="comic-list" id="comic-list">
         {% include 'comics/_list.html.twig' with { comics: comics } %}
