--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,6 +7,10 @@ body {
     color: #f5f5f5;
     font-family: 'Roboto', sans-serif;
 }
+a{
+    text-decoration: none;
+    text-underline: none;
+}
 
 /* Navbar style */
 .navbar {
@@ -51,32 +55,29 @@ h1 {
 .comic-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    justify-content: space-around;
+    padding: 20px;
 }
 
 .comic-card {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-    width: 180px;
+    position: relative;
+    background: black;
+    box-shadow: 0 2px 6px rgb(255, 255, 255);
+    height: 410px;
+    width: 230px;
+    margin: 10px;
+    padding: 2px;
     text-align: center;
 }
 
 .comic-card img {
     width: 100%;
-    height: 250px;
-    object-fit: cover;
-    border-bottom: 1px solid #ddd;
-}
-
-.comic-card h3 {
-    font-size: 1rem;
-    margin: 0.5rem 0 0.25rem 0;
 }
 
 .comic-card p {
-    font-size: 0.8rem;
-    color: #555;
+    font-size: 13px;
+    color: white;
+    font-weight: bold;
 }
 
 
