--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,8 +40,8 @@
                            href="{{ path('front_series') }}">Series</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if app.request.get('_route') starts with 'front_series' %}active{% endif %}"
-                           href="{{ path('front_series') }}">Characters</a>
+                        <a class="nav-link {% if app.request.get('_route') starts with 'front_characters' %}active{% endif %}"
+                           href="{{ path('front_characters') }}">Characters</a>
                     </li>
 
                 </ul>
