feat(template) : create new independant files for homePage

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,6 @@
     <h1>The Lastest Comics</h1>
 
     <div class="comic-list" id="comic-list">
-        {% include 'comics/_list.html.twig' with { comics: comics } %}
+        {% include 'home/_list.html.twig' with { comics: comics } %}
     </div>
 {% endblock %}
