--- a/templates/comics/_list.html.twig
+++ b/templates/comics/_list.html.twig
@@ -13,3 +13,29 @@
 {% else %}
     <p>Aucun comic trouvé.</p>
 {% endfor %}
+
+<div class="pagination">
+    {% set queryParams = {} %}
+    {% if searchTitle is defined and searchTitle != '' %}
+        {% set queryParams = {'title': searchTitle} %}
+    {% endif %}
+
+    {% if currentPage > 1 %}
+        <a href="{{ path(routeName, queryParams | merge({'page': currentPage - 1})) }}" data-page="{{ currentPage - 1 }}">« Previous</a>
+    {% endif %}
+
+    {% for p in startPage..endPage %}
+        {% if p == currentPage %}
+            <span class="current">{{ p }}</span>
+        {% else %}
+            <a href="{{ path(routeName, queryParams | merge({'page': p})) }}" data-page="{{ p }}">{{ p }}</a>
+        {% endif %}
+    {% endfor %}
+
+    {% if currentPage < totalPages %}
+        <a href="{{ path(routeName, queryParams | merge({'page': currentPage + 1})) }}" data-page="{{ currentPage + 1 }}">Next »</a>
+    {% endif %}
+    {% if currentPage < totalPages %}
+        <a href="{{ path(routeName, queryParams | merge({'page':  totalPages})) }}" data-page="{{ totalPages }}">...Last</a>
+    {% endif %}
+</div>
